--- a/style.css
+++ b/style.css
@@ -3,6 +3,12 @@
 
 @import url('https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700,800,900');
 
+body {
+  background-color: #e74c3c;
+  /*zoom: 150%;*/
+  color: white;
+}
+
 .clear {
   clear: both;
 }
@@ -15,78 +21,226 @@
 }
 
 header p {
-  font-size: 14px;
+  margin-top: 24px;
+  font-size: 16px;
   font-weight: 300;
+  line-height: 22px;
 }
 
 header p u {
-  font-weight: 500;
+  font-weight: 600;
+}
+
+header {
+  margin-bottom: 64px;
+  margin-top: 24px;
 }
 
 h1 {
-  font-size: 36px;
+  font-size: 42px;
   font-weight: 700;
 }
 
 .scoreboard {
-  width: 400px;
+  width: 680px;
+  height: 270px;
   margin: 0 auto;
-  border: 1px black solid;
+  /*border: 1px white solid;*/
+  display: inline-block;
+  margin-bottom: 64px;
 }
 
 .scoreboard-title {
   font-size: 18px;
   line-height: 36px;
   font-weight: 500;
-  border-bottom: 1px black solid;
+  border-bottom: 1px white solid;
   margin-bottom: 10px;
 }
 
+.block-1{
+  text-align: center;
+  background-color: rgba(0,0,0,.1);
+  float: left;
+  width:330px; 
+}
+
+.block-2 {
+  text-align: center;
+  background-color: rgba(0,0,0,.1);
+  float: right;
+  width:330px; 
+}
+
 .scoreboard-score p {
-  width: 150px;
-  display: inline-block;
+  display: block;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 70px;
+  margin: 0;
 }
 
 
 #myScore {
-  font-size: 40px;
-  width: 150px;
-  display: inline-block; 
-  line-height: 56px;
+  font-size: 100px;
+  font-weight: 600;
+  display: block; 
+  line-height: 200px;
 }
 
 #botScore {
-  font-size: 40px;
-  width: 150px;
-  display: inline-block; 
-  line-height: 56px;
+  font-size: 100px;
+  font-weight: 600;
+  display: block; 
+  line-height: 200px;
 }
 
 button {
-  width: 150px;
-  height: 30px;
+  color: white;
+  text-transform: uppercase;
+  width: 200px;
+  height: 50px;
   text-align: center;
-  font-weight: 400;
-  font-size: 14px;
-  background-color: white;
-  border: 1px black solid;
+  font-weight: 600;
+  font-size: 20px;
+  background-color: #e74c3c;
+  border: 1px white solid;
+  margin-top: 20px;
+  margin-right: 20px;
 }
 
+button:hover {
+  background-color: #E34946;
+  border-bottom: 3px white solid;
+}
+
+
 h4 {
-  font-size: 18px;
-  font-weight: 400;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 24px;
+  margin-bottom: 40px;
 }
 
 #myChoice {
-  font-weight: 700;
+  font-weight: 500;
 }
 
 #botChoice {
-  font-weight: 700;
+  font-weight: 500;
 }
 
 #result
 {
-  font-size: 18px;
+  font-size: 24px;
   font-weight: 800;
+  line-height: 40px;
+}
+
+h2 {
+  font-size: 14px;
+  line-height: 28px;
+}
+
+footer {
+  width: 100%;
+  height: 36px;
+}
+
+
+@media only screen and (max-width: 360px) {
+    body {
+        zoom:90%;
+    }
+
+    #container {
+      width:90%;
+      padding-left: 15px;
+      padding-right: 15px;
+      box-sizing: border-box;
+    }
+
+    .scoreboard {
+      width: 100%;
+      margin-bottom: 24px;
+      height: 170px;
+    }
+
+    .block-1{
+      width:45%;
+    }
+
+    .block-2 {
+      width:45%;
+    }
+
+    button {
+      width: 70%;
+      margin-top: 20px;
+    }
+
+    .scoreboard-score p {
+      line-height: 50px;
+    }
+
+
+    #myScore {
+      line-height: 120px;
+    }
+
+    #botScore {
+      line-height: 120px;
+    }
+
+    header {
+      margin-bottom: 24px;
+    }
+}
+
+@media only screen and (min-width: 361px) and (max-width: 960px) {
+    #container {
+        width: 90%;
+        margin: 0 auto;
+        box-sizing: border-box;
+    }
+
+    button {
+      width: 150px;
+      margin-top: 20px;
+    }
+
+    .scoreboard {
+      width: 80%;
+      height: 200px;
+    }
+
+    .block-1{
+      width:45%;
+    }
+
+    .block-2 {
+      width:45%;
+    }
+
+    button {
+      width: 70%;
+      margin-top: 20px;
+    }
+
+    .scoreboard-score p {
+      line-height: 50px;
+    }
+
+
+    #myScore {
+      line-height: 150px;
+    }
+
+    #botScore {
+      line-height: 150px;
+    }
+
+    header {
+      margin-bottom: 24px;
+    }
 }
